Prevent wrapping of negative values on hover line
Negative values might wrap when the hover line was at the far-right of
the chart which was pretty ugly.

--- a/app/assets/stylesheets/d3.sass
+++ b/app/assets/stylesheets/d3.sass
@@ -73,6 +73,7 @@ line
 
   span.wrap
     display: block
+    white-space: nowrap
 
     span.square
       display: inline-block
